[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/styles/subscribe_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/nodes/PartHighlight.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.176471, 0.235294, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.8, 0.8, 0.8, 1 )

[node name="PartHighlight" type="Control"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 74 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Panel" parent="."]
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -26.0
margin_bottom = -14.0
rect_min_size = Vector2( 15, 12 )
mouse_filter = 1
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
mouse_filter = 1
custom_fonts/font = ExtResource( 1 )
text = "2"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_TileHighlight_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TileHighlight_mouse_exited"]
